--- a/Nominations/Info.plist
+++ b/Nominations/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AUTH_TOKEN</key>
+	<string>Bearer 845|MDY4IAX4nxEnXKfF9B2hoaHp24RbYoKIX08tk0Dyb73fc351</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Poppins-Light.ttf</string>
